kvm-summary/2025-03/03-10-0625.txt
From 31705b27 to c446ec27
KVM mailing list update from 31705b27 to c446ec27

Top 15 contributor Email domains (Based on Email Body)

     22 linaro.org

Top 15 contributors (Based on Email Body)

     22  =?UTF-8?q?Philippe=20Mathieu-Daud=C3=A9?= <philmd@linaro.org>

===== Patch list in this time period =====


===== Patch Commit Messages ====

New:  hw/vfio/common: Include missing 'system/tcg.h' header
[PATCH v2 01/21] hw/vfio/common: Include missing 'system/tcg.h' header
Author: Philippe Mathieu-Daudé <philmd@linaro.org>

Always include necessary headers explicitly, to avoid
when refactoring unrelated ones:

  hw/vfio/common.c:1176:45: error: implicit declaration of function ‘tcg_enabled’;
   1176 |                                             tcg_enabled() ? DIRTY_CLIENTS_ALL :
        |                                             ^~~~~~~~~~~

Signed-off-by: Philippe Mathieu-Daudé <philmd@linaro.org>
Reviewed-by: Pierrick Bouvier <pierrick.bouvier@linaro.org>
Reviewed-by: Richard Henderson <richard.henderson@linaro.org>
Reviewed-by: Cédric Le Goater <clg@redhat.com>
---
 hw/vfio/common.c | 1 +
 1 file changed, 1 insertion(+)

----------------------------------------------------------------------

New:  hw/vfio: Build various objects once
[PATCH v2 00/21] hw/vfio: Build various objects once
Author: Philippe Mathieu-Daudé <philmd@linaro.org>

By doing the following changes:
- Clean some headers up
- Replace compile-time CONFIG_KVM check by kvm_enabled()
- Replace compile-time CONFIG_IOMMUFD check by iommufd_builtin()
we can build less vfio objects.

Since v1:
- Added R-b tags
- Introduce type_is_registered()
- Split builtin check VS meson changes (rth)
- Consider IGD

Philippe Mathieu-Daudé (21):
  hw/vfio/common: Include missing 'system/tcg.h' header
  hw/vfio/spapr: Do not include <linux/kvm.h>
  hw/vfio: Compile some common objects once
  hw/vfio: Compile more objects once
  hw/vfio: Compile iommufd.c once
  system: Declare qemu_[min/max]rampagesize() in 'system/hostmem.h'
  hw/vfio: Compile display.c once
  system/kvm: Expose kvm_irqchip_[add,remove]_change_notifier()
  hw/vfio/pci: Convert CONFIG_KVM check to runtime one
  qom: Introduce type_is_registered()
  hw/vfio/igd: Define TYPE_VFIO_PCI_IGD_LPC_BRIDGE
  hw/vfio/igd: Check CONFIG_VFIO_IGD at runtime using vfio_igd_builtin()
  hw/vfio/igd: Compile once
  system/iommufd: Introduce iommufd_builtin() helper
  hw/vfio/pci: Check CONFIG_IOMMUFD at runtime using iommufd_builtin()
  hw/vfio/pci: Compile once
  hw/vfio/ap: Check CONFIG_IOMMUFD at runtime using iommufd_builtin()
  hw/vfio/ccw: Check CONFIG_IOMMUFD at runtime using iommufd_builtin()
  hw/vfio/s390x: Compile AP and CCW once
  hw/vfio/platform: Check CONFIG_IOMMUFD at runtime using
    iommufd_builtin
  hw/vfio/platform: Compile once

 docs/devel/vfio-iommufd.rst  |  2 +-
 hw/vfio/pci-quirks.h         |  8 +++++
 include/exec/ram_addr.h      |  3 --
 include/qom/object.h         |  8 +++++
 include/system/hostmem.h     |  3 ++
 include/system/iommufd.h     |  6 ++++
 include/system/kvm.h         |  8 ++---
 target/s390x/kvm/kvm_s390x.h |  2 +-
 hw/ppc/spapr_caps.c          |  1 +
 hw/s390x/s390-virtio-ccw.c   |  1 +
 hw/vfio/ap.c                 | 27 ++++++++---------
 hw/vfio/ccw.c                | 27 ++++++++---------
 hw/vfio/common.c             |  1 +
 hw/vfio/igd-stubs.c          | 20 +++++++++++++
 hw/vfio/igd.c                |  4 +--
 hw/vfio/iommufd.c            |  1 -
 hw/vfio/migration.c          |  1 -
 hw/vfio/pci-quirks.c         |  9 +++---
 hw/vfio/pci.c                | 57 +++++++++++++++++-------------------
 hw/vfio/platform.c           | 25 ++++++++--------
 hw/vfio/spapr.c              |  4 +--
 qom/object.c                 |  5 ++++
 hw/vfio/meson.build          | 35 +++++++++++++---------
 23 files changed, 152 insertions(+), 106 deletions(-)

----------------------------------------------------------------------

